@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-03 View Product Detail

class "Product UI" as UI <<boundary>>
class "ShoesController / ReviewsController" as Controller <<controller>>
class "ShoesService / ReviewsService" as Service <<service>>
class "Shoe" as Shoe <<domain>>
class "ShoeDetail" as ShoeDetail <<domain>>
class "Review" as Review <<domain>>

UI --> Controller : GET /shoes/detail/:productId
Controller --> Service : delegates
Service --> Shoe : uses
Service --> ShoeDetail : uses
Service --> Review : uses

note right of UI
UC-03 - View Product Detail
Actors: Guest, User, Manager, Admin
Pre: Có productId hợp lệ
Post: Trang chi tiết sản phẩm hiển thị
end note
@enduml
